fixed issue where flex justify content was aspace between and a gap was there in restaurant cards . now using grid with col 330px1fr

--- a/src/components/DishItems/Dishitems.css
+++ b/src/components/DishItems/Dishitems.css
@@ -23,14 +23,10 @@
     border-radius: 35px;
 }
 .dishes {
-  width: 100%;
   display: flex;
   flex-direction: column;
 }
-.dishes>div{
-    overflow: hidden;
-    width: 100%;
-}
+
 .dish-item:hover {
   transform: scale(0.85);
 }
