--- a/src/components/RestaurantListing/RestaurantListing.css
+++ b/src/components/RestaurantListing/RestaurantListing.css
@@ -43,16 +43,18 @@
   height: 230px;
   object-fit: cover;
 }
-.restaurants-listing{
-width: 100%;
-}
-.restaurants-grid{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
+
+.restaurants-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  justify-items: center;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
+  gap: 25px; /* Add consistent spacing between grid items */
   margin-top: 25px;
 }
+
 @media only screen and (max-width: 685px) {
 
 
